[package]
name = "timers"
version = "0.1.1"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
crossterm = "0.29.0"
#notify-rust = "4.11.7"
#ratatui = "0.29.0"
# reducing the amount of recursive deps
notify-rust = { version = "4.11.7", default-features = false, features = ["dbus"] }
ratatui = { version = "0.29.0", default-features = false, features = ["crossterm"] }

[[bin]]
name = "timers"
path = "src/main.rs"
